<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_assignment_24"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/courses" />
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/send" />
                <item
                    android:id="@+id/nav_info"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/how_many" />
            </menu>
        </item>
    </group>
</menu>